--- a/core/templates/dashboard/super_owner/stores.html
+++ b/core/templates/dashboard/super_owner/stores.html
@@ -32,9 +32,9 @@
 
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h5 class="mb-0">إدارة المتاجر</h5>
-                        <a href="{% url 'super_owner_add_store' %}" class="btn btn-success">
+                        <a href="{% url 'super_owner_quick_add_store' %}" class="btn btn-success">
                             <i class="fas fa-plus me-2"></i>
-                            إضافة متجر جديد
+                            إضافة متجر جديد (سريع)
                         </a>
                     </div>
 
