--- a/core/templates/dashboard/super_owner/edit_store.html
+++ b/core/templates/dashboard/super_owner/edit_store.html
@@ -90,13 +90,26 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="delivery_time" class="form-label">زمن التوصيل</label>
-                                    <input type="text" class="form-control" id="delivery_time" name="delivery_time" value="{{ store.delivery_time }}" placeholder="مثال: 30-45 دقيقة">
+                                    <label class="form-label">زمن التوصيل</label>
+                                    <div class="row g-2">
+                                        <div class="col-6">
+                                            <input type="number" min="0" class="form-control" id="delivery_time_value" name="delivery_time_value" value="{{ store.delivery_time_value|default:24 }}">
+                                        </div>
+                                        <div class="col-6">
+                                            <select class="form-select" id="delivery_time_unit" name="delivery_time_unit">
+                                                <option value="hour" {% if store.delivery_time_unit == 'hour' or not store.delivery_time_unit %}selected{% endif %}>ساعة</option>
+                                                <option value="day" {% if store.delivery_time_unit == 'day' %}selected{% endif %}>يوم</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="delivery_fee" class="form-label">رسوم التوصيل</label>
-                                    <input type="number" step="0.01" class="form-control" id="delivery_fee" name="delivery_fee" value="{{ store.delivery_fee }}">
+                                    <div class="input-group">
+                                        <input type="number" step="0.01" class="form-control" id="delivery_fee" name="delivery_fee" value="{{ store.delivery_fee }}">
+                                        <span class="input-group-text">IQD</span>
+                                    </div>
                                 </div>
 
                                 <div class="mb-3">
